Remove UnionFS and Clean Up Unused Code / Tests (#350)